--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Clipboard Security Tool</title>
+  <title>Clipboard Cleaner</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Clipboard Security Tool 🔒</h1>
-  <button id="clearClipboard">Clear Clipboard Now</button>
+  <h1>Clipboard Cleaner 🔒</h1>
+  <p>This tool helps protect your privacy by clearing sensitive data from your clipboard.</p>
+
+  <button id="clearClipboard">🧹 Clear Clipboard</button>
   <p id="status"></p>
 
   <script src="script.js"></script>
