--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
   <h1>Clipboard Cleaner 🔒</h1>
-  <p>This tool helps protect your privacy by clearing sensitive data from your clipboard.</p>
+
+  <p><strong>Why this tool matters:</strong> Your clipboard stores data you copy (like passwords, messages, and personal info). This tool clears that clipboard manually and automatically, helping protect your privacy.</p>
+
+  <h2>🛠️ How to Use</h2>
+  <ul>
+    <li>Click the <strong>"🧹 Clear Clipboard"</strong> button anytime to immediately clear your clipboard.</li>
+    <li>This tool also <strong>automatically clears your clipboard every 30 seconds</strong> in the background.</li>
+    <li>You’ll see a message confirming your clipboard was successfully cleared.</li>
+  </ul>
 
   <button id="clearClipboard">🧹 Clear Clipboard</button>
   <p id="status"></p>
