--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
   <h1>Clipboard Cleaner 🔒</h1>
 
-  <p><strong>Why this tool matters:</strong> Your clipboard stores data you copy (like passwords, messages, and personal info). This tool clears that clipboard manually and automatically, helping protect your privacy.</p>
+  <div class="why-section">
+    <strong>Why this tool matters:</strong><br>
+    <span>Your clipboard stores data you copy (like passwords, messages, and personal info).</span><br>
+    <span>This tool clears that clipboard manually and automatically, helping protect your privacy.</span>
+  </div>
 
   <h2>🛠️ How to Use</h2>
   <ul>
